[tool.poetry]
name = "article_ripper"
version = "0.1.0"
description = ""
authors = ["nozwock <57829219+nozwock@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pypandoc = "^1.7.2"
requests = "^2.27.1"
readability-lxml = "^0.8.1"
beautifulsoup4 = "^4.10.0"
tqdm = "^4.62.3"
typer = {extras = ["all"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
flake8 = "^4.0.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
